# magic

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README.md  issue_log.txt  temp.txt
archive/: final_gen3_robotiq_2f_85.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ackermann_steering_controller/share/ackermann_steering_controller/: local_setup.sh  package.sh
install/admittance_controller/share/admittance_controller/: package.sh
install/bicycle_steering_controller/share/bicycle_steering_controller/: package.sh
install/control/lib/control/: control_node  kinova_gen3_mujoco
install/control/share/control/: package.sh
install/control_msgs/share/control_msgs/: package.sh
install/controller_interface/share/controller_interface/: package.sh
install/controller_manager/lib/controller_manager/: ros2_control_node  spawner
install/controller_manager/share/controller_manager/: package.sh
install/controller_manager_msgs/share/controller_manager_msgs/: package.sh
install/diff_drive_controller/share/diff_drive_controller/: local_setup.sh  package.sh
install/effort_controllers/share/effort_controllers/: package.sh
install/force_torque_sensor_broadcaster/share/force_torque_sensor_broadcaster/: package.sh
install/forward_command_controller/share/forward_command_controller/: local_setup.sh  package.sh
install/gpio_controllers/share/gpio_controllers/: package.sh
install/gripper_controllers/share/gripper_controllers/: package.sh
install/hardware_interface/share/hardware_interface/: local_setup.sh  package.sh
install/hardware_interface_testing/share/hardware_interface_testing/: package.sh
install/imu_sensor_broadcaster/share/imu_sensor_broadcaster/: package.sh
install/joint_limits/lib/joint_limits/: joint_limits_rosparam_test
install/joint_limits/share/joint_limits/: local_setup.sh  package.sh
install/joint_state_broadcaster/share/joint_state_broadcaster/: local_setup.sh  package.sh
install/joint_trajectory_controller/share/joint_trajectory_controller/: local_setup.sh  package.sh
install/kinova_gen3_6dof_robotiq_2f_85_moveit_config/share/kinova_gen3_6dof_robotiq_2f_85_moveit_config/: package.sh
install/kinova_gen3_7dof_robotiq_2f_85_moveit_config/share/kinova_gen3_7dof_robotiq_2f_85_moveit_config/: local_setup.sh  package.sh
install/kinova_gen3_lite_moveit_config/share/kinova_gen3_lite_moveit_config/: package.sh
install/kortex_api/share/kortex_api/: package.sh
install/kortex_bringup/share/kortex_bringup/: package.sh
install/kortex_description/share/kortex_description/: package.sh
install/kortex_driver/share/kortex_driver/: local_setup.sh  package.sh
install/mecanum_drive_controller/share/mecanum_drive_controller/: local_setup.sh  package.sh
install/moveit_go/include/: fsm_states.hpp  object_definitions.hpp
install/moveit_go/lib/moveit_go/: dual_arm_fsm  moveit_go_dual_test_IK
install/moveit_go/share/moveit_go/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mujoco_ros2/lib/mujoco_ros2/: moveit_pose  mujoco_node
install/mujoco_ros2/share/mujoco_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/picknik_reset_fault_controller/share/picknik_reset_fault_controller/: local_setup.sh  package.sh
install/picknik_twist_controller/share/picknik_twist_controller/: package.sh
install/pid_controller/share/pid_controller/: package.sh
install/pose_broadcaster/share/pose_broadcaster/: package.sh
install/position_controllers/share/position_controllers/: local_setup.sh  package.sh
install/range_sensor_broadcaster/share/range_sensor_broadcaster/: package.sh
install/realtime_tools/share/realtime_tools/: local_setup.sh  package.sh
install/robotiq_controllers/share/robotiq_controllers/: package.sh
install/robotiq_description/share/robotiq_description/: local_setup.sh  package.sh
install/robotiq_driver/share/robotiq_driver/: package.sh
install/robotiq_hardware_tests/share/robotiq_hardware_tests/: local_setup.sh  package.sh
log/: latest_build
magic_manip/: one_arm_control.py
magic_manip/kinova_gen3/: gen3_robot1.xml  gen3_robot2.xml
magic_manip/kinova_gen3_mujoco/: scene.xml  two_arm_table.xml
manipulation/: README.md  impedance_control.py  main.py  one_arm_control.py  utils.py
manipulation/kinova_gen3_mujoco/: two_arm_table.xml  two_arm_vention_table.xml
ros2_aruco/config/: aruco_parameters.yaml
ros2_aruco/ros2_aruco/: aruco_node.py  backup.py
ros2_ws/: .gitignore  MUJOCO_LOG.TXT  log.txt  moveit_log1.txt  object_pose_log_20251109_185322.csv  out.txt  out2.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/control/: .gitignore  setup.py
ros2_ws/src/end_pose_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/gz_ros2_control/: README.md
ros2_ws/src/hello_moveit/: package.xml
ros2_ws/src/joint_state_listener/: package.xml  setup.cfg  setup.py
ros2_ws/src/moveit_go/: CMakeLists.txt  package.xml
ros2_ws/src/moveit_go/config/: 7dof_kinova_config.yaml  mtc.rviz
ros2_ws/src/moveit_go/include/: dual_arm_planner.hpp  fsm_states.hpp  object_definitions.hpp
ros2_ws/src/moveit_go/include/moveit_go/: object_definitions.hpp
ros2_ws/src/moveit_go/include/mtc/: kinova_pick_place_demo_parameters.hpp  kinova_pick_place_task.h
ros2_ws/src/moveit_go/launch/: dual_arm_plan.launch.py  run_mtc.launch.py
ros2_ws/src/moveit_go/src/: dual_arm_fsm.cpp  dual_arm_joint_planner.cpp  dual_arm_planner.cpp  grasp_and_lift.cpp  kinova_pick_place_demo.cpp  kinova_pick_place_task.cpp  motion_planning.cpp  motion_planning_advanced.cpp  motion_planning_cylinder.cpp  motion_planning_dual.cpp  motion_planning_final_fsm.cpp  moveit_go_dual.cpp  moveit_go_dual_test_IK.cpp  moveit_go_left.cpp  moveit_go_right.cpp  moveit_left_feedback.cpp  object_definitions.cpp  test_poses.py  test_scene.py  transforms.py
ros2_ws/src/mujoco_ros2/: package.xml  setup.py
ros2_ws/src/two_arm_moveit2_config/: .setup_assistant  CMakeLists.txt  mujoco_test.py  package.xml
(+276 files in other folders)
