<?xml version="1.0"?>
<package format="3">
  <name>end_pose_cpp</name>
  <version>0.1.0</version>
  <description>MoveIt2 planning node for Kinova arm</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
